fix module name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "magentoese-venia-test",
+  "name": "magentoese/module-venia-test",
   "description": "",
   "type": "magento2-module",
   "license": [
