--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "extra": {
         "map": [
             [
-                "catalog",
+                "media",
                 "pub/media"
             ]
         ]
