--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "magentoese/module-venia-test",
   "description": "",
-  "type": "magento2-module",
+  "type": "magento2-component",
   "require": {
       "magentoese/module-data-install": "dev-master"
   },
